--- a/res/layout/maintablet.xml
+++ b/res/layout/maintablet.xml
@@ -114,6 +114,7 @@
 					android:id="@+id/grow_edit1"
 					android:hint="@string/grow_txt1_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -126,6 +127,7 @@
 					android:id="@+id/grow_edit2"
 					android:hint="@string/grow_txt2_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -138,6 +140,7 @@
 					android:id="@+id/rain_edit1"
 					android:hint="@string/rain_txt1_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -150,6 +153,7 @@
 					android:id="@+id/rain_edit2"
 					android:hint="@string/rain_txt2_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -162,6 +166,7 @@
 					android:id="@+id/rain_edit3"
 					android:hint="@string/rain_txt3_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<Button
@@ -204,6 +209,7 @@
 					android:id="@+id/specie1_edit1"
 					android:hint="@string/specie_txt1_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -216,6 +222,7 @@
 					android:id="@+id/specie1_edit2"
 					android:hint="@string/specie_txt2_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -228,6 +235,7 @@
 					android:id="@+id/specie1_edit3"
 					android:hint="@string/specie_txt3_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -240,6 +248,7 @@
 					android:id="@+id/specie1_edit6"
 					android:hint="@string/specie_txt6_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -252,6 +261,7 @@
 					android:id="@+id/specie1_edit7"
 					android:hint="@string/specie_txt7_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -264,6 +274,7 @@
 					android:id="@+id/specie1_edit4"
 					android:hint="@string/specie_txt4_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -276,6 +287,7 @@
 					android:id="@+id/specie1_edit5"
 					android:hint="@string/specie_txt5_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -288,6 +300,7 @@
 					android:id="@+id/specie1_edit8"
 					android:hint="@string/specie_txt8_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<Button
@@ -329,6 +342,7 @@
 					android:id="@+id/specie2_edit1"
 					android:hint="@string/specie_txt1_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -341,6 +355,7 @@
 					android:id="@+id/specie2_edit2"
 					android:hint="@string/specie_txt2_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -353,6 +368,7 @@
 					android:id="@+id/specie2_edit3"
 					android:hint="@string/specie_txt3_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -365,6 +381,7 @@
 					android:id="@+id/specie2_edit6"
 					android:hint="@string/specie_txt6_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -377,6 +394,7 @@
 					android:id="@+id/specie2_edit7"
 					android:hint="@string/specie_txt7_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -389,6 +407,7 @@
 					android:id="@+id/specie2_edit4"
 					android:hint="@string/specie_txt4_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -401,6 +420,7 @@
 					android:id="@+id/specie2_edit5"
 					android:hint="@string/specie_txt5_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
@@ -413,6 +433,7 @@
 					android:id="@+id/specie2_edit8"
 					android:hint="@string/specie_txt8_hint"
 					android:layout_width="fill_parent"
+					android:inputType="numberDecimal"
 					android:layout_height="wrap_content"
 					/>
 				<Button
