--- a/res/layout/maintablet.xml
+++ b/res/layout/maintablet.xml
@@ -21,465 +21,12 @@
       	<FrameLayout 
       	    android:layout_width="match_parent"
            	android:layout_height="match_parent"
-       		android:id="@android:id/tabcontent" >
-       		<!-- Sim tab -->
-            <RelativeLayout
-    			android:id="@+id/tab1"
-    			android:layout_width="fill_parent"
-    			android:layout_height="fill_parent"
-    			android:background="@drawable/backgroundsim"
-    			android:orientation="vertical" >
-            	<LinearLayout
-    				android:id="@+id/pantallasimulacio"
-    				android:layout_width="fill_parent"
-    				android:layout_marginTop="10dp"
-    				android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:layout_height="500dp"
-    			/>
-				<LinearLayout
-    				android:id="@+id/LinearLayout02"
-    				android:layout_width="fill_parent"
-    				android:layout_height="wrap_content"
-    				android:layout_below="@+id/pantallasimulacio">
-    				<TextView
-						android:id="@+id/show_info"
-						android:layout_width="fill_parent"
-						android:layout_height="wrap_content"
-						android:textColor="#000000"
-						android:layout_marginLeft="10dp"
-						android:layout_marginTop="5dp"
-						android:gravity="left"
-						android:text="" />		
-				</LinearLayout>
-			</RelativeLayout>
-			<!-- Graph tab -->
-            <RelativeLayout
-    			android:id="@+id/tab6"
-    			android:layout_width="fill_parent"
-    			android:layout_height="fill_parent"
-    			android:background="@drawable/backgroundsim"
-    			android:orientation="vertical" >
-            	<LinearLayout
-    				android:id="@+id/graficsimulacio"
-    				android:layout_width="fill_parent"
-    				android:layout_marginTop="10dp"
-    				android:layout_marginLeft="10dp"
-					android:layout_marginRight="10dp"
-					android:layout_height="500dp"
-    			/>
-				<LinearLayout
-    				android:id="@+id/LinearLayout03"
-    				android:layout_width="fill_parent"
-    				android:layout_height="wrap_content"
-    				android:layout_below="@+id/graficsimulacio">
-    				<TextView
-						android:id="@+id/show_infograph"
-						android:layout_width="fill_parent"
-						android:layout_height="wrap_content"
-						android:textColor="#000000"
-						android:layout_marginLeft="10dp"
-						android:layout_marginTop="5dp"
-						android:gravity="left"
-						android:text="" />		
-				</LinearLayout>
-			</RelativeLayout>
-            <!-- Plants tab -->
-            <!-- inicia el ScrollView -->
-   			<LinearLayout
-				android:id="@+id/tab2"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="@drawable/background"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-        	<ScrollView 
-        	    android:layout_width="fill_parent"
-        		android:layout_height="fill_parent">
-          	<LinearLayout
-				android:id="@+id/insidetab2"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-				<TextView
-					android:id="@+id/grow_txt1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/grow_txt1" />
-				<EditText
-					android:id="@+id/grow_edit1"
-					android:hint="@string/grow_txt1_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/grow_txt2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/grow_txt2" />
-				<EditText
-					android:id="@+id/grow_edit2"
-					android:hint="@string/grow_txt2_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/rain_txt1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/rain_txt1" />
-				<EditText
-					android:id="@+id/rain_edit1"
-					android:hint="@string/rain_txt1_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/rain_txt2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/rain_txt2" />
-				<EditText
-					android:id="@+id/rain_edit2"
-					android:hint="@string/rain_txt2_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/rain_txt3"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/rain_txt3" />
-				<EditText
-					android:id="@+id/rain_edit3"
-					android:hint="@string/rain_txt3_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<Button
-					android:id="@+id/plants_update"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="70dip"
-					android:text="@string/update" 
-					/>
-        	</LinearLayout>
-        	</ScrollView>
-        	</LinearLayout>
-        	<!-- Specie 1 tab -->
-          	<!-- inicia el ScrollView -->
-          	<LinearLayout
-				android:id="@+id/tab3"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="@drawable/background"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-        	<ScrollView 
-        	    android:layout_width="fill_parent"
-        		android:layout_height="fill_parent">
-          	<LinearLayout
-				android:id="@+id/insidetab3"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				
-				xmlns:android="http://schemas.android.com/apk/res/android">
-				<TextView
-					android:id="@+id/specie1_txt1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt1" />
-				<EditText
-					android:id="@+id/specie1_edit1"
-					android:hint="@string/specie_txt1_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt2" />
-				<EditText
-					android:id="@+id/specie1_edit2"
-					android:hint="@string/specie_txt2_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt3"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt3" />
-				<EditText
-					android:id="@+id/specie1_edit3"
-					android:hint="@string/specie_txt3_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt6"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt6" />
-				<EditText
-					android:id="@+id/specie1_edit6"
-					android:hint="@string/specie_txt6_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt7"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt7" />
-				<EditText
-					android:id="@+id/specie1_edit7"
-					android:hint="@string/specie_txt7_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt4"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt4" />
-				<EditText
-					android:id="@+id/specie1_edit4"
-					android:hint="@string/specie_txt4_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt5"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt5" />
-				<EditText
-					android:id="@+id/specie1_edit5"
-					android:hint="@string/specie_txt5_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie1_txt8"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt8" />
-				<EditText
-					android:id="@+id/specie1_edit8"
-					android:hint="@string/specie_txt8_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<Button
-					android:id="@+id/specie1_update"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="70dip"
-					android:text="@string/update" 
-					/>
-        	</LinearLayout>
-        	</ScrollView>
-        	</LinearLayout>
-        	<!-- Specie 2 tab -->
-        	<!-- inicia el ScrollView -->
-        	<LinearLayout
-				android:id="@+id/tab4"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="@drawable/background"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-        	<ScrollView 
-        	    android:layout_width="fill_parent"
-        		android:layout_height="fill_parent">
-        	<LinearLayout
-				android:id="@+id/insidetab4"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-				<TextView
-					android:id="@+id/specie2_txt1"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt1" />
-				<EditText
-					android:id="@+id/specie2_edit1"
-					android:hint="@string/specie_txt1_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt2"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt2" />
-				<EditText
-					android:id="@+id/specie2_edit2"
-					android:hint="@string/specie_txt2_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt3"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt3" />
-				<EditText
-					android:id="@+id/specie2_edit3"
-					android:hint="@string/specie_txt3_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt6"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt6" />
-				<EditText
-					android:id="@+id/specie2_edit6"
-					android:hint="@string/specie_txt6_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt7"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt7" />
-				<EditText
-					android:id="@+id/specie2_edit7"
-					android:hint="@string/specie_txt7_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt4"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt4" />
-				<EditText
-					android:id="@+id/specie2_edit4"
-					android:hint="@string/specie_txt4_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt5"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt5" />
-				<EditText
-					android:id="@+id/specie2_edit5"
-					android:hint="@string/specie_txt5_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<TextView
-					android:id="@+id/specie2_txt8"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:textColor="#000000"
-					android:text="@string/specie_txt8" />
-				<EditText
-					android:id="@+id/specie2_edit8"
-					android:hint="@string/specie_txt8_hint"
-					android:layout_width="fill_parent"
-					android:inputType="numberDecimal"
-					android:layout_height="wrap_content"
-					/>
-				<Button
-					android:id="@+id/specie2_update"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginBottom="70dip"
-					android:text="@string/update" 
-					/>
-        	</LinearLayout>
-        	</ScrollView>
-        	</LinearLayout>
-        	<!-- Help tab -->
-        	<!-- inicia el ScrollView -->
-        	<LinearLayout
-				android:id="@+id/tab5"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:background="@drawable/background"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-        	<ScrollView 
-        	    android:layout_width="fill_parent"
-        		android:layout_height="fill_parent">
-        	<LinearLayout
-				android:id="@+id/insidetab5"
-				android:layout_width="fill_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="10dip"
-				android:layout_marginRight="10dip"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
-				<TextView
-					android:id="@+id/help"
-					android:layout_width="fill_parent"
-					android:layout_height="wrap_content"
-					android:autoLink="web"
-					android:linksClickable="true"
-					android:textColor="#000000"
-					android:text="@string/help" />
-        	</LinearLayout>
-        	</ScrollView>
-        	</LinearLayout>
-  		</FrameLayout>
+       		android:id="@android:id/tabcontent" />
+		<android.support.v4.view.ViewPager 
+       	    android:id="@+id/viewpager" 
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+		/>
    		<!-- End of tabs -->
  	</LinearLayout>
 </TabHost>
