--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,7 +8,9 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-      	<HorizontalScrollView android:layout_width="fill_parent"
+      	<HorizontalScrollView 
+      	    android:id="@+id/hscroll"
+      	    android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
             android:fillViewport="true"
             android:scrollbars="none">
